Add Dmytro and correct authorship

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -10,4 +10,5 @@ sat:
 mitchell:
   name: Dmytro Lavraniuk
   title: Senior Business Analyst
-  url: https://www.youtube.com/user/porta0ne
+  image_url: https://www.portaone.com/wp-content/uploads/elementor/thumbs/dmytro-lavraniuk-qcqmxozm6d18wcdtwufbg48j67f79we4do3eicf9uo.jpg
+  url: https://www.linkedin.com/in/dmytro-lavraniuk-524968115
